--- a/TODO
+++ b/TODO
@@ -3,21 +3,21 @@ Verifier la fonction compare pour gerer le typage des données
 créer la fenetre de parametrage ++
 Langues
 fenetrage
-scoring auto
+scoring auto delai
 ligne a sauter et séparateur
 
-si charger des règles et déjà des règles, enregistrer ?
-Chargement de règles sur des données qui ne correspondent pas à revoir
-
+loose focus combobox : update value ++
 
 gerer les cancel sur les askopenfilename !
 
 Finir les langues dans les fonctions
 
 
+pourquoi l'export est une ligne sur deux ?
+Ou est le meilleur score, pourquoi i ln'est pas dans l'export ?
+pourquoi il  ya une différence entre les deux genscor ?
 
-améliorer fenetre no visual :
-permettre de supprimer des fichiers, par défaut ajouter les fichiers  à la liste
+
 
 Gerer les CNV :
 Ajout d'un attribut TYPE de variant qui est a completer pour chaque regle et pour chaque fihcier.
